fixed some alignment issue for smaller screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,11 +22,10 @@
 .footer {
     background-color: black;
     color: white;
-    position: absolute;
     right: 0;
-    bottom: 20px;
+    bottom: 0;
+    height: 25px;
     left: 0;
-    padding: 1rem;
     text-align: center;
 }
 
@@ -35,7 +34,6 @@
 }
 
 aside {
-  height: 750px;
 }
 
 @media all and (min-width: 600px) {
